Change to monospace font
Signed-off-by: An Cao <kcj.pop.com@gmail.com>

--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Iceberg');
-
 body {
-	max-height: 100vh;
-}
-
-.f-iceberg {
-	font-family: 'Iceberg', cursive;
+  max-height: 100vh;
+  font-family: monospace;
 }
