--- a/src/App.css
+++ b/src/App.css
@@ -82,9 +82,44 @@ body {
   background-color: #00b5ad;
 }
 
+.button--modal {
+  padding: 0.5rem 1rem;
+  font-size: 1.5rem;
+}
+
 .help-icon {
   max-width: 3rem;
   display: block;
   margin-left: auto;
   margin-right: auto;
+}
+
+.modal {
+  background-color: #fff;
+  border-radius: 0.5rem;
+  padding: 3rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.7);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.result {
+  font-size: 2.5rem;
+  font-weight: 700;
+  font-family: sans-serif;
+  margin: 1rem;
+  color: #827717;
 }
